# lazy-dev-ai

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  test.py
.github/workflows/: publish.yml
lazy_dev_ai/: cli.py  files.py  llm.py
lazy_dev_ai/prompts/: default_cleanup.txt  default_comment.txt  default_docstring.txt  defaults.py
lazy_dev_ai/templates/: default_base.txt
